[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enhanced-input"
version = "0.2.1"
description = "Python 'input' module enhancements, such as combining colorama and updates to johejo 'inputimeout' library."
authors = [
    {name = "Nick Amell", email = "namell91@gmail.com"}
]
requires-python = ">=3.9.0, <3.13.0"
license = {text = "MIT"}
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
urls = {homepage = "https://github.com/nga-27/enhanced-input"}

dependencies = [
    "colorama==0.4.6",
    "maskpass==0.3.7"
]

[project.optional-dependencies]
dev = [
    'pylint==3.2.5',
    'pycodestyle==2.12.0',
]

[tool.setuptools.packages.find]
exclude = ["*.tests", "*.tests.*", "tests.*", "tests"]